--- a/ArtGlob/app.json
+++ b/ArtGlob/app.json
@@ -1,16 +1,11 @@
 {
   "expo": {
-    "name": "ArtGlob",
-    "slug": "ArtGlob",
+    "name": "ArtGlobe",
+    "slug": "ArtGlobe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
