--- a/ArtGlob/package.json
+++ b/ArtGlob/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artglob",
+  "name": "ArtGlobe",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@tanstack/react-query": "^4.32.1",
@@ -21,7 +22,8 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-svg": "^13.10.0"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
